<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Peer to Poker</string>
    <string name="app_description">Peer to Poker client for each player</string>
    <string name="notification_text">has invited you to play a game.</string>
    <string name="timeout_toast_text">Invitation to game has timed out.</string>
    <string name="schat_inv_text">%s invited you to play a game.</string>
    <string name="discovery_node_text">Discovery Nodes</string>
    <string name="create_node_text">Create Node</string>
    <string name="join_node_text">Join Node</string>
    <string name="next_text">Next</string>
    <string name="enter_node_text">Enter Node Name</string>
    <string name="title_activity_discovery_setup">DiscoverySetupActivity</string>
    <string name="action_settings">Settings</string>
    
    <string name="raise">Raise</string>
    <string name="fold">Fold</string>
    <string name="check">Check</string>
    <string name="call">Call</string>
    <string name="allin">All-In</string>
    <string name="bet">Bet</string>
    <string name="card_image_left">Left card</string>
    <string name="card_image_right">Right card</string>

    <string name="role_none">No Role</string>
    <string name="role_dealer">Dealer</string>
    <string name="role_smallblind">Small Blind</string>
    <string name="role_bigblind">Big Blind</string>
</resources>
