<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        />
    <LinearLayout
        	android:id="@+id/select_content"
        	android:layout_width="match_parent"
   		 	android:layout_height="match_parent"
	   		android:orientation="vertical">	       
	    <TextView
	        android:id="@+id/platformVersionLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="16sp" 
	        android:layout_gravity="center_horizontal|center_vertical"/>
	    <Button
	        android:id="@+id/node_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="3dp"
	        android:text="@string/discovery_node_text"
	        android:layout_marginTop="10dp"
	         />
	    <EditText
	        android:id="@+id/node_text"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:hint="@string/enter_node_text"
	        android:inputType="text"
	        android:layout_marginTop="10dp"/>
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        <Button 
	            android:id="@+id/create_node"
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:enabled="false"
	        	android:layout_weight="1"
	        	android:text="@string/create_node_text"/>
	        <Button 
	            android:id="@+id/join_node"
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:enabled="false"
	        	android:layout_weight="1"
	        	android:text="@string/join_node_text"/>
	    </LinearLayout>
		<ListView
	        android:id="@+id/nodeListView"
	        android:layout_width="match_parent"
	        android:layout_height="150dp"
	        android:layout_marginTop="20dp">
	    </ListView>
	    <TextView 
	        android:id="@+id/emptyTextNodeListView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:visibility="gone"
	        android:textSize="16sp" 
	        android:gravity="center"
	        />
	    <ListView
	        android:id="@+id/sessionListView"
	        android:layout_width="match_parent"
	        android:layout_height="150dp" 
	        android:visibility="invisible"
	        android:layout_marginTop="20dp">
	    </ListView>
	    <TextView 
	        android:id="@+id/emptyTextSessionListView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:visibility="gone"
	        android:textSize="16sp" 
	        android:gravity="center"
	        />
	    <Button 
	        android:id="@+id/next"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:text="@string/next_text"
	        android:layout_marginTop="10dp"/>
	    <ListView
	        android:id="@+id/logListView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:transcriptMode="normal">
	    </ListView>
	</LinearLayout>
	
</RelativeLayout>